--- a/game/style.css
+++ b/game/style.css
@@ -6,7 +6,7 @@
 
 :root {
   --primary-color: rgba(114, 79, 241, 0.555);
-  --select-color: #20201f;
+  --select-color: #d5ebd539;
   --success: rgba(15, 158, 2, 0.405);
   --danger: rgb(214, 23, 23);
 }
@@ -18,7 +18,7 @@ body {
   display: flex;
   justify-content: center;
   height: 200vh;
-  background: #2df92d00;
+  background: #a9baa958;
 }
 
 .Game-container {
@@ -27,7 +27,11 @@ body {
   border: 1px solid black;
   width: 500px;
   height: 590px;
-  background-image: linear-gradient(163deg, #4b10fcad 0%,rgba(0, 225, 105, 0.301) 100%);
+  background-image: linear-gradient(
+    163deg,
+    #4b10fcad 0%,
+    rgba(0, 225, 105, 0.301) 100%
+  );
   border-radius: 20px;
   transition: all 0.3s;
 }
@@ -228,11 +232,10 @@ label {
 }
 
 .Wrong {
-  bottom: 50%;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: rgb(20, 20, 20);
+  background-color: rgba(206, 206, 206, 0);
   border: none;
   font-weight: 600;
   display: flex;
@@ -240,14 +243,14 @@ label {
   justify-content: center;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
   cursor: pointer;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   overflow: hidden;
   position: relative;
 }
 
 .svgIcon {
   width: 12px;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .svgIcon path {
@@ -257,14 +260,14 @@ label {
 .Wrong:hover {
   width: 140px;
   border-radius: 50px;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   background-color: rgba(245, 255, 237, 0.014);
   align-items: center;
 }
 
 .Wrong:hover .svgIcon {
   width: 50px;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   transform: translateY(60%);
 }
 
@@ -273,7 +276,7 @@ label {
   top: -20px;
   content: "Delete";
   color: white;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   font-size: 2px;
 }
 
@@ -281,34 +284,46 @@ label {
   font-size: 13px;
   opacity: 1;
   transform: translateY(30px);
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .right {
-  --green: #1BFD9C;
-  font-size: 15px;
-  padding: 0.7em 2.7em;
-  letter-spacing: 0.06em;
+  padding: 15px 25px;
+  border: unset;
+  border-radius: 15px;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e800;
   position: relative;
-  font-family: inherit;
-  border-radius: 0.6em;
-  bottom: 50%;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms;
   overflow: hidden;
-  transition: all 0.3s;
-  line-height: 1.4em;
-  border: 2px solid var(--green);
-  background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%,transparent 60% , rgba(27, 253, 156, 0.1) 100%);
-  color: var(--green);
-  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4), 0 0 9px 3px rgba(27, 253, 156, 0.1);
 }
 
-button:hover {
-  color: #82ffc9;
-  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6), 0 0 9px 3px rgba(27, 253, 156, 0.2);
+.right::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms;
 }
 
-button:hover:before {
-  transform: translateX(15em);
+.right:hover {
+  color: rgba(232, 232, 232, 0.933);
+}
+
+.right::before:hover::before {
+  width: 100%;
 }
 
 .start,
@@ -391,7 +406,7 @@ button:hover:before {
   position: relative;
   cursor: pointer;
   font-weight: 900;
-  transition-duration: .2s;
+  transition-duration: 0.2s;
 }
 
 .game path {
@@ -413,11 +428,11 @@ button:hover:before {
 .button1:hover,
 .button1:focus {
   background-color: black;
-  transition-duration: .2s;
+  transition-duration: 0.2s;
 }
 
 .button1:hover .arrow {
-  animation: slide-right .6s ease-out both;
+  animation: slide-right 0.6s ease-out both;
 }
 /* arrow animation */
 @keyframes slide-right {
@@ -433,8 +448,8 @@ button:hover:before {
 }
 
 .button1:active {
-  transform: translate(1px , 1px);
-  transition-duration: .2s;
+  transform: translate(1px, 1px);
+  transition-duration: 0.2s;
 }
 
 /* Media Query: Large Smartphone (Vertical) */
